fix: Add text-wrapping on smaller screens for loading message

--- a/app/index.css
+++ b/app/index.css
@@ -224,6 +224,7 @@ li {
 
 	.loading {
 		font-size: 22px;
+		white-space: normal;
 	}
 
 	.error {
